# SlicerOpenIGTLink

./: CMakeLists.txt  OpenIGTLinkIFConfig.cmake.in  README.md  SlicerBlockInstallVP9.cmake  SuperBuild.cmake
CMake/: OpenIGTLinkConfig.cmake.in  OpenIGTLinkIFConfig.cmake.in  OpenIGTLinkIOConfig.cmake.in  SlicerBlockInstallVP9.cmake  SlicerOpenIGTLinkConfig.cmake.in
GenericSerialDeviceRemoteControl/: CMakeLists.txt  GenericSerialDeviceRemoteControl.py  README.md
OpenIGTLinkIF/: CMakeLists.txt  README.md  qSlicerOpenIGTLinkIFModule.cxx  qSlicerOpenIGTLinkIFModule.h  qSlicerOpenIGTLinkIFModuleWidget.h  qSlicerTextFileReader.cxx  qSlicerTextFileReader.h
OpenIGTLinkIF/Command/: CMakeLists.txt  vtkSlicerOpenIGTLinkIFCommand.cxx  vtkSlicerOpenIGTLinkIFCommand.h
OpenIGTLinkIF/Converter/: CMakeLists.txt
OpenIGTLinkIF/GUI/: qMRMLIGTLConnectorTreeView.h  qMRMLIGTLIOModel.h  qMRMLIGTLIOTreeView.h  qMRMLSceneIGTLConnectorModel.cxx  qMRMLSceneIGTLConnectorModel.h  qSlicerIGTLConnectorPropertyWidget.h  qSlicerIGTLIONodeSelectorWidget.h
OpenIGTLinkIF/Logic/: CMakeLists.txt  vtkSlicerOpenIGTLinkIFLogic.cxx  vtkSlicerOpenIGTLinkIFLogic.h
OpenIGTLinkIF/MRML/: CMakeLists.txt  vtkIGTLCircularBuffer.cxx  vtkIGTLCircularBuffer.h  vtkIGTLStreamingVolumeCodec.cxx  vtkIGTLStreamingVolumeCodec.h  vtkIGTLVP9VolumeCodec.cxx  vtkIGTLVP9VolumeCodec.h  vtkMRMLBitStreamNode.cxx  vtkMRMLBitStreamNode.h  vtkMRMLIGTLConnectorNode.cxx  vtkMRMLIGTLConnectorNode.h  vtkMRMLIGTLIOCompressionDeviceNode.cxx  vtkMRMLIGTLIOCompressionDeviceNode.h  vtkMRMLIGTLQueryNode.cxx  vtkMRMLIGTLQueryNode.h  vtkMRMLIGTLSensorNode.cxx  vtkMRMLIGTLSensorNode.h  vtkMRMLIGTLStatusNode.cxx  vtkMRMLIGTLStatusNode.h  vtkMRMLIGTLTrackingDataBundleNode.cxx  vtkMRMLIGTLTrackingDataBundleNode.h  vtkMRMLIGTLTrackingDataQueryNode.cxx  vtkMRMLIGTLTrackingDataQueryNode.h  vtkMRMLImageMetaElement.h  vtkMRMLImageMetaListNode.cxx  vtkMRMLImageMetaListNode.h  vtkMRMLLabelMetaListNode.cxx  vtkMRMLLabelMetaListNode.h  vtkMRMLTextNode.cxx  vtkMRMLTextNode.h  vtkMRMLTextStorageNode.cxx  vtkMRMLTextStorageNode.h  vtkSlicerOpenIGTLinkCommand.cxx  vtkSlicerOpenIGTLinkCommand.h
OpenIGTLinkIF/MRML/Text/: vtkMRMLTextNode.h  vtkMRMLTextStorageNode.h
OpenIGTLinkIF/Resources/UI/: qSlicerIGTLIOPropertyWidget.ui  qSlicerOpenIGTLinkIFModule.ui
OpenIGTLinkIF/SuperBuild/: External_OpenIGTLink.cmake  External_OpenIGTLinkIO.cmake
OpenIGTLinkIF/Testing/: CMakeLists.txt  vtkMRMLConnectorCommandSendAndReceiveTest.cxx  vtkMRMLConnectorImageSendAndReceiveTest.cxx  vtkMRMLConnectorVideoSendAndReceiveTest.cxx
OpenIGTLinkIF/Widgets/: CMakeLists.txt  qMRMLIGTLConnectorTreeView.cxx  qMRMLIGTLConnectorTreeView.h  qMRMLIGTLIOModel.cxx  qMRMLIGTLIOModel.h  qMRMLIGTLIOModel_p.h  qMRMLIGTLIOTreeView.cxx  qMRMLIGTLIOTreeView.h  qMRMLSceneIGTLConnectorModel.cxx  qMRMLSceneIGTLConnectorModel.h  qSlicerIGTLConnectorPropertyWidget.cxx  qSlicerIGTLConnectorPropertyWidget.h  qSlicerIGTLIONodeSelectorWidget.cxx  qSlicerIGTLIONodeSelectorWidget.h  qSlicerOpenIGTLinkIFModuleWidget.cxx  qSlicerOpenIGTLinkIFModuleWidget.h
OpenIGTLinkIF/Widgets/Resources/: qSlicerOpenIGTLinkIFModule.qrc
OpenIGTLinkIF/Widgets/Resources/UI/: qSlicerIGTLConnectorPropertyWidget.ui  qSlicerIGTLIONodeSelectorWidget.ui
OpenIGTLinkRemote/: CMakeLists.txt  qSlicerOpenIGTLinkRemoteModule.cxx  qSlicerOpenIGTLinkRemoteModule.h
OpenIGTLinkRemote/Logic/: CMakeLists.txt  vtkSlicerOpenIGTLinkRemoteLogic.cxx  vtkSlicerOpenIGTLinkRemoteLogic.h
OpenIGTLinkRemote/MRML/: vtkMRMLOpenIGTLinkRemoteNode.cxx  vtkMRMLOpenIGTLinkRemoteNode.h
OpenIGTLinkRemote/Widgets/: qSlicerOpenIGTLinkRemoteCommandWidget.cxx  qSlicerOpenIGTLinkRemoteCommandWidget.h  qSlicerOpenIGTLinkRemoteModuleWidget.cxx  qSlicerOpenIGTLinkRemoteModuleWidget.h  qSlicerOpenIGTLinkRemoteQueryWidget.cxx  qSlicerOpenIGTLinkRemoteQueryWidget.h
PlusRemote/: CMakeLists.txt  PlusRemote.py  qSlicerPlusConfigFileIOOptionsWidget.cxx  qSlicerPlusConfigFileIOOptionsWidget.h  qSlicerPlusConfigFileOptionsWidget.cxx  qSlicerPlusConfigFileOptionsWidget.h  qSlicerPlusConfigFileReader.cxx  qSlicerPlusConfigFileReader.h  qSlicerPlusRemoteModule.cxx  qSlicerPlusRemoteModule.h  qSlicerPlusRemoteModuleWidget.cxx  qSlicerPlusRemoteModuleWidget.h
PlusRemote/Logic/: CMakeLists.txt  vtkSlicerPlusRemoteLogic.cxx  vtkSlicerPlusRemoteLogic.h
PlusRemote/MRML/: CMakeLists.txt  vtkMRMLPlusRemoteLauncherNode.cxx  vtkMRMLPlusRemoteLauncherNode.h  vtkMRMLPlusRemoteNode.cxx  (+9 more)
PlusRemote/Widgets/: CMakeLists.txt  qMRMLPlusLauncherRemoteWidget.cxx  qMRMLPlusLauncherRemoteWidget.h  qMRMLPlusServerLauncherRemoteWidget.cxx  qMRMLPlusServerLauncherRemoteWidget.h  qMRMLPlusServerLauncherTableView.cxx  qMRMLPlusServerLauncherTableView.h
PlusRemote/Widgets/DesignerPlugins/: CMakeLists.txt  qMRMLPlusServerLauncherRemoteWidgetPlugin.cxx  qMRMLPlusServerLauncherRemoteWidgetPlugin.h  qMRMLPlusServerLauncherTableViewPlugin.cxx  qMRMLPlusServerLauncherTableViewPlugin.h  qSlicerPlusRemoteModuleWidgetsAbstractPlugin.cxx  qSlicerPlusRemoteModuleWidgetsAbstractPlugin.h  qSlicerPlusRemoteModuleWidgetsPlugin.cxx  qSlicerPlusRemoteModuleWidgetsPlugin.h
PlusRemote/Widgets/Resources/: qMRMLPlusLauncherRemoteWidget.qrc
PlusRemote/Widgets/Resources/Icons/: PlusLauncherRemoteStatus.xcf
PlusRemote/Widgets/Resources/UI/: qMRMLPlusLauncherRemoteWidget.ui  qMRMLPlusServerLauncherRemoteWidget.ui  qMRMLPlusServerLauncherTableView.ui
SuperBuild/: External_OpenIGTLink.cmake  External_OpenIGTLinkIO.cmake  External_VP9.cmake  External_YASM.cmake  External_yasm.cmake  FindVP9.cmake  FindYASM.cmake
UltrasoundRemoteControl/: CMakeLists.txt  README.md  UltrasoundRemoteControl.py
UltrasoundRemoteControl/Resources/Icons/: UltrasoundRemoteControl.xcf
UltrasoundRemoteControl/Widgets/: CMakeLists.txt  qSlicerAbstractUltrasoundParameterWidget.cxx  qSlicerAbstractUltrasoundParameterWidget.h  qSlicerAbstractUltrasoundParameterWidget_p.h  qSlicerUltrasoundDoubleParameterSlider.cxx  qSlicerUltrasoundDoubleParameterSlider.h  qSlicerUltrasoundTGCParameterWidget.cxx  qSlicerUltrasoundTGCParameterWidget.h
(+6 files in other folders)
